--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -40,6 +40,8 @@
     </div>
 {% endblock %}
 {% block script %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../../static/js/getCookie.js"></script>
     <script src="../../static/js/anime.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../../static/js/splash_page.js"></script>
