API complete ? and progress on txt anims

--- a/story/templates/story/base.html
+++ b/story/templates/story/base.html
@@ -11,7 +11,7 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-<div id="pageWrapper">
+
     {% block header %}
     {% endblock %}
     {% block nav %}
@@ -27,7 +27,6 @@
     {% block content %}
     {% endblock %}
     {% block script %}
-    {% endblock %}
-</div>
+    {% endblock %}1
 </body>
 </html>
