--- a/story/static/css/story_page.css
+++ b/story/static/css/story_page.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Lobster', cursive;
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
 }
 
 #storyWrapper {
@@ -19,7 +19,7 @@ body {
     color: lightseagreen;
     border: #7f7f7f inset medium;
     display: grid;
-    grid-template-rows: 2fr 4fr 1fr;
+    grid-template-rows: 3fr 6fr 1fr;
     grid-template-columns: repeat(8, 1fr);
     min-width: 100%
     /*box-shadow: 5px 10px */
@@ -92,6 +92,8 @@ hr {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    overflow: hidden;
+    padding-right: 20px;
 }
 
 #storyButtonBox {
@@ -117,4 +119,21 @@ hr {
 }
 .optionSelector {
     display: none;
+    opacity: 0;
+    max-height: 50%;
+    overflow: auto;
+}
+
+.word {
+    display: inline;
+    opacity: 0;
+}
+
+.storySelector {
+    opacity: 0;
+}
+
+#storyWelcome {
+    color: darkslategray;
+    padding: 10px 20px;
 }
