--- a/story/static/css/splash_page.css
+++ b/story/static/css/splash_page.css
@@ -1,38 +1,26 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: mintcream;
 }
 
 body {
     padding: 30px;
-    background-color: #171A21;
-}
-
-header hr {
-    opacity: 0;
-    width: 0;
-    margin-bottom: 10px;
+    background-color: black;
 }
 
 .sub-span, .main-span {
-    opacity: 0;
-    font-family: 'Lobster', cursive;
+    /*opacity: 0;*/
+    font-family: 'serif';
+    color: mintcream;
 }
 
 .imgBox {
-    height: 70vh;
+    height: 50vh;
     display: flex;
     flex-direction: row;
     overflow: hidden;
 }
 
-/*Ask how to get these properly centered*/
 .img1 {
     background-image: url('../img/plant.jpg');
     background-size: cover;
@@ -48,61 +36,121 @@ header hr {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70%);
     position: relative;
 }
-
+a {
+    text-decoration: none;
+}
 #bottomNav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding: 5px;
-    background-color: #77878B;
-    z-index: -1;
-    border-radius: 100px;
-}
-
-.ghost-mid, .ghost-left, .ghost-right {
-    display: inline-block;
-    width: 200px;
-    padding: 8px;
-    color: #305252;
-    background-color: transparent;
-    border: 1px solid #305252;
     text-align: center;
-    outline: none;
-    text-decoration: none;
-}
-
-.ghost-button {
-    border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.ghost-button::after {
-    content: "";
-    border-radius: 5px;
-    position: absolute;
+    justify-content: space-around;
     z-index: -1;
+    background-color: mintcream;
+    border: 3px solid darkslategray;
+    padding: 10px 5px;
+}
+/* Okay so current goal is to actually make some interesting buttons
+Using different state effects. :after, :activate, :visited etc
+Once the button is fleshed out in that capacity we can worry about
+actually positioning them and making a coherent page out of it*/
+.a-btn {
+    width: 120px;
+}
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+
+}
+
+.btn-nav {
+    color: dimgray;
+    background-color: mintcream;
+    border: 1.5px solid darkslategray;
+    border-radius: 100px;
+    transition: all .2s;
+    padding: 10px 25px;
+    margin: 10px 0;
+    display: inline-block;
+    position: relative;
+}
+
+.btn-nav:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 20px rgba(0,0,0,.2);
+}
+.btn-nav:active {
+    transform: translateY(1px);
+    box-shadow: 0 5px 5px rgba(0,0,0,.2);
+
+}
+
+.btn-nav::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    color: dimgray;
+    position: absolute;
+    background-color: lightslategray;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    z-index: -1;
+    transition: all .25s;
+}
+
+.btn-nav:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
-    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.ghost-button:hover {
-    -webkit-transform: scale(1.25, 1.25);
-    transform: translateY(20px) scale(1.25, 1.25)
-}
 
-.ghost-button:hover::after {
-    opacity: 1;
-}
+/* This is a button I pulled off the net. Make your own! Gotta learn!
+.ghost-mid, .ghost-left, .ghost-right {*/
+    /*display: inline-block;*/
+    /*width: 200px;*/
+    /*padding: 8px;*/
+    /*color: #305252;*/
+    /*background-color: transparent;*/
+    /*border: 1px solid #305252;*/
+    /*text-align: center;*/
+    /*outline: none;*/
+    /*text-decoration: none;*/
+/*}*/
 
-.ghost-button > a {
-    font-family: 'Lobster', cursive;
-    font-size: 1.5em;
-}
+/*.ghost-button {*/
+    /*border-radius: 5px;*/
+    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
+    /*-webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+    /*transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+/*}*/
+
+/*.ghost-button::after {*/
+    /*content: "";*/
+    /*border-radius: 5px;*/
+    /*position: absolute;*/
+    /*z-index: -1;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);*/
+    /*opacity: 0;*/
+    /*-webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+    /*transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+/*}*/
+
+/*.ghost-button:hover {*/
+    /*-webkit-transform: scale(1.25, 1.25);*/
+    /*transform: translateY(20px) scale(1.25, 1.25)*/
+/*}*/
+
+/*.ghost-button:hover::after {*/
+    /*opacity: 1;*/
+/*}*/
+
+/*.ghost-button > a {*/
+    /*font-family: 'Lobster', cursive;*/
+    /*font-size: 1.5em;*/
+/*}*/
