completed some work on the menu component

--- a/story/static/css/sass/abstracts/variables.scss
+++ b/story/static/css/sass/abstracts/variables.scss
@@ -7,12 +7,20 @@ $color-theme-2: rgba(46, 64, 82, 0.63);
 $color-theme-1: #CAC4CE;
 
 // TYPOGRAPHY
-$color-typo-1: #725AC1;
+$color-typo-1: #eeeeee;
+$font-header: "Open Sans", sans-serif;
 
 // EXTRANEOUS
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
 
-// CONTROLS
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
