--- a/story/static/css/sass/main--splash.css
+++ b/story/static/css/sass/main--splash.css
@@ -7,41 +7,59 @@ html {
 
 body {
   padding: 3rem;
-  background-color: #CAC4CE; }
+  background-color: #fff; }
+
+.heading__box {
+  padding-top: 20vh; }
 
 .heading-main {
-  color: #725AC1;
+  color: #eeeeee;
   text-transform: uppercase;
   backface-visibility: hidden;
   text-align: center;
-  position: relative; }
+  position: relative;
+  transform: translateY(50%);
+  font-family: "Open Sans", sans-serif; }
   .heading-main--sub {
     font-size: 2.5rem;
     position: absolute;
     margin: 0 auto;
-    top: -1.75rem;
+    top: -2.75rem;
     animation-name: moveInLeft;
     animation-duration: .8s;
     animation-timing-function: ease-out;
     animation-fill-mode: backwards;
-    z-index: 1; }
+    z-index: 1;
+    font-weight: 400;
+    text-decoration: #eeeeee;
+    text-decoration-line: underline; }
   .heading-main--main {
     display: inline-block;
     font-size: 6rem;
     z-index: 5;
     animation: fadeInVertWiggle 1.5s ease-in-out;
     animation-delay: .9s;
-    animation-fill-mode: backwards; }
+    animation-fill-mode: backwards;
+    font-weight: 700; }
+
+.text__outline {
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff; }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
+    text-decoration: none;
     transform: translateX(-10rem); }
   80% {
     transform: translateX(1rem) skewX(30deg); }
+  90% {
+    text-decoration: none;
+    text-decoration: transparent; }
   100% {
     opacity: 1;
-    transform: translate(0) skewX(0); } }
+    transform: translate(0) skewX(0);
+    text-decoration: #eeeeee;
+    text-decoration-line: underline; } }
 @keyframes fadeInSimple {
   0% {
     opacity: 0; }
@@ -55,13 +73,77 @@ body {
   35% {
     opacity: 1; }
   55% {
-    transform: translateY(-1rem); }
-  85% {
-    transform: translateY(0.5rem); }
+    transform: translateY(-0.75rem); }
+  90% {
+    transform: translateY(0.4rem); }
   100% {
     transform: translateY(0); } }
+.menu {
+  font-size: 2rem;
+  position: relative;
+  display: block;
+  text-align: center;
+  padding: 1rem 2rem;
+  background-color: #f7f7f7;
+  width: 30rem;
+  height: 5rem;
+  z-index: 10;
+  margin: auto;
+  transform: translateY(40vh);
+  border-radius: 3px;
+  border: 0.5rem solid #7ed56f;
+  color: #28b485; }
+  .menu__btn {
+    font-size: 1.5rem;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-decoration: none;
+    color: transparent;
+    background-color: inherit;
+    border-radius: inherit;
+    border: inherit;
+    border-color: transparent;
+    transition: all .3s;
+    z-index: -1; }
+    .menu__btn--left {
+      width: 35%;
+      height: 80%;
+      border-right: none;
+      top: 10%; }
+    .menu__btn--right {
+      width: 35%;
+      height: 80%;
+      border-left: none;
+      top: 10%; }
+    .menu__btn--top {
+      width: 75%;
+      left: 12.5%;
+      height: 60%;
+      border-bottom: none; }
+  .menu:hover .menu__btn, .menu__btn:hover .menu__btn {
+    overflow: hidden;
+    z-index: -1; }
+    .menu:hover .menu__btn--left, .menu__btn:hover .menu__btn--left {
+      transform: translateX(-99%);
+      color: #28b485;
+      border-color: #7ed56f; }
+    .menu:hover .menu__btn--right, .menu__btn:hover .menu__btn--right {
+      transform: translateX(29rem);
+      color: #28b485;
+      border-color: #7ed56f; }
+    .menu:hover .menu__btn--top, .menu__btn:hover .menu__btn--top {
+      transform: translateY(-99%);
+      color: #28b485;
+      border-color: #7ed56f; }
+
 .header {
-  height: 80vh; }
+  height: 85vh;
+  background-color: mintcream;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.65), rgba(40, 180, 133, 0.65)), url("../../img/img1.jpg");
+  background-size: cover;
+  background-position: bottom; }
 
 /* Okay so current goal is to actually make some interesting buttons
 Using different state effects. :after, :activate, :visited etc
