--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -1,7 +1,13 @@
 {# Current Status : Completed page load header anims #}
 {# TODOS #}
 {# Complete header #}
+{# Thinking of using another background image like in natours #}
+{# Utilize another linear gradient over the image to increase #}
+{# typeface readability. I like the page padding of natours & header #}
+{# design. #}
+
 {# Create natours style cards for about me and navigation #}
+{# possibly featuring buttons to other pages #}
 {% extends 'story/base.html' %}
 {% load staticfiles %}
 {% block styles %}
@@ -10,9 +16,24 @@
     <header class="header">
         <div class="heading__box">
             <h1 class="heading-main">
-                <span class="heading-main--sub">Welcome to the</span>
+                <span class="heading-main--sub text__opaque">Welcome to the</span>
                 <span class="heading-main--main">Sage Page</span>
             </h1>
+        </div>
+        <div class="menu">
+            My Work
+            <a href='{% url 'post_list' %}' class="menu__btn menu__btn--left">
+                Blog
+            </a>
+            <a href="{% url 'game_page' %}" class="menu__btn menu__btn--top">
+                Vistelse
+            </a>
+            <a href="#" class="menu__btn menu__btn--right">
+                Nowherelink
+            </a>
+            <nav class="menu__nav">
+                {# SOCIAL MEDIA IMGS/LINKS GO HERE #}
+            </nav>
         </div>
     </header>
 {% endblock %}
@@ -20,26 +41,14 @@
 {% endblock %}
 {% block content %}
     <div id="contentWrapper">
-        <div class="imgBox">
-            {#            <div class="img1 splash-img"></div>#}
-            {#            <div class="img2 splash-img"></div>#}
-        </div>
+
+        {#            <a href="#">#}
+        {#                <div class="btn">#}
+        {#                    About#}
+        {#                </div>#}
+        {#            </a> currently no about page...#}
         <div id="bottomNav">
-            <a href='{% url 'post_list' %}' class="a-btn">
-                <div class="btn btn-nav">
-                    Blog
-                </div>
-            </a>
-            <a href="{% url 'game_page' %}" class="a-btn">
-                <div class="btn btn-nav">
-                    Vistelse
-                </div>
-            </a>
-            {#            <a href="#">#}
-            {#                <div class="btn">#}
-            {#                    About#}
-            {#                </div>#}
-            {#            </a> currently no about page...#}
+            {#            social media links go here #}
         </div>
     </div>
 {% endblock %}
