--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -12,6 +12,7 @@
 {% load staticfiles %}
 {% block styles %}
     <link rel="stylesheet" href="{% static 'css/sass/main--splash.css' %}">{% endblock %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 {% block header %}
     <header class="header">
         <div class="heading__box">
@@ -31,8 +32,13 @@
             <a href="#" class="menu__btn menu__btn--right">
                 Nowherelink
             </a>
-            <nav class="menu__nav">
-                {# SOCIAL MEDIA IMGS/LINKS GO HERE #}
+            <nav class="menu__btn menu__nav">
+                <a target = "_blank" href="https://github.com/sagehogue" class="menu__link"><i class="fab fa-github-square menu__link--media-icon"></i></a>
+                <a target = "_blank" href="https://www.linkedin.com/in/sage-hogue-0431a7146/" class="menu__link"><i class="fab fa-linkedin menu__link--media-icon"></i></a>
+                <a target = "_blank" href="https://stackoverflow.com/users/9855918/sage-hogue?tab=profile" class="menu__link"><i class="fab fa-stack-overflow menu__link--media-icon"></i></a>
+                <a target = "_blank" href="https://twitter.com/sagemph" class="menu__link"><i class="fab fa-twitter menu__link--media-icon"></i></a>
+                <a href="" class="menu__link"><i class="far fa-envelope menu__link--media-icon"></i></a>
+                {# Figure out how to make email form pop up on clickn ^ #}
             </nav>
         </div>
     </header>
