--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -37,8 +37,7 @@
                 <a target = "_blank" href="https://www.linkedin.com/in/sage-hogue-0431a7146/" class="menu__link"><i class="fab fa-linkedin menu__link--media-icon"></i></a>
                 <a target = "_blank" href="https://stackoverflow.com/users/9855918/sage-hogue?tab=profile" class="menu__link"><i class="fab fa-stack-overflow menu__link--media-icon"></i></a>
                 <a target = "_blank" href="https://twitter.com/sagemph" class="menu__link"><i class="fab fa-twitter menu__link--media-icon"></i></a>
-                <a href="" class="menu__link"><i class="far fa-envelope menu__link--media-icon"></i></a>
-                {# Figure out how to make email form pop up on clickn ^ #}
+                <a href="mailto:sagehogue@gmail.com" class="menu__link menu__link--email"><i class="far fa-envelope menu__link--media-icon"></i></a>
             </nav>
         </div>
     </header>
@@ -63,5 +62,5 @@
     <script src="../../static/js/getCookie.js"></script>
     <script src="../../static/js/anime.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    {#    <script src="../../static/js/splash_page.js"></script>#}
+        <script src="../../static/js/main.js"></script>
 {% endblock %}
