--- a/story/static/css/sass/base/typography.scss
+++ b/story/static/css/sass/base/typography.scss
@@ -47,3 +47,14 @@
     1px 1px 0 $color-white;
   }
 }
+
+//@media screen and (max-width: 800px) {
+//  .heading-main {
+//    &--sub {
+//      font-size: 4rem;
+//    }
+//    &--main {
+//      font-size: 11rem;
+//    }
+//  }
+//}
