--- a/story/templates/story/game_page.html
+++ b/story/templates/story/game_page.html
@@ -30,8 +30,8 @@
 {% block script %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../../static/js/anime.min.js"></script>
-    <script src="../../static/js/getCookie.js"></script>
-    <script src="../../static/js/story_revis.js"></script>
+    <script src="../../static/js/story_page/getCookie.js"></script>
+    <script src="../../static/js/story_page/story_revis.js"></script>
 {% endblock %}
 {#Chris says I want to have a wrapper around all the areas that I want to set#}
 {#To display: none because if I don't, they won't be rendered at all and the#}
