fixing stupid thing I did

--- a/story/static/css/sass/abstracts/variables.scss
+++ b/story/static/css/sass/abstracts/variables.scss
@@ -10,6 +10,18 @@ $color-theme-1: #CAC4CE;
 $color-typo-1: #eeeeee;
 $font-header: "Open Sans", sans-serif;
 
+// RESPONSIVE MENU VARIABLES
+$menu-width: 30rem;
+$menu-height: 5rem;
+$menu-padding: 1rem 2rem;
+$menu-font-size: 2rem;
+$btn-font-size: 1.5rem;
+$mobile-menu-width: 30rem;
+$mobile-menu-height: 5rem;
+$mobile-menu-padding: 1rem 2rem;
+$mobile-menu-font-size: 2rem;
+$mobile-btn-font-size: 1.5rem;
+
 // EXTRANEOUS
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
