--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -43,7 +43,7 @@
                    class="menu__link"><i class="fab fa-stack-overflow menu__link--media-icon"></i></a>
                 <a target="_blank" href="https://twitter.com/sagemph" class="menu__link"><i
                         class="fab fa-twitter menu__link--media-icon"></i></a>
-                <a href="mailto:sagehogue@gmail.com" class="menu__link menu__link--email"><i
+                <a href="#" class="menu__link menu__link--email"><i
                         class="far fa-envelope menu__link--media-icon"></i></a>
             </nav>
         </div>
