--- a/story/static/css/sass/components/menu.scss
+++ b/story/static/css/sass/components/menu.scss
@@ -1,13 +1,13 @@
 .menu {
-  font-size: 2rem;
+  font-size: $menu-font-size;
   font-weight: 900;
   position: relative;
   display: block;
   text-align: center;
-  padding: 1rem 2rem;
+  padding: $menu-padding;
   background-color: $color-grey-light-1;
-  width: 30rem;
-  height: 5rem;
+  width: $menu-width;
+  height: $menu-height;
   z-index: 10;
   margin: auto;
   transform: translateY(40vh);
@@ -15,7 +15,7 @@
   border: .5rem solid $color-primary-light;
   color: $color-primary-dark;
   &__btn {
-    font-size: 1.5rem;
+    font-size: $btn-font-size;
     display: inline-block;
     position: absolute;
     top: 0;
@@ -102,14 +102,3 @@
   width: 200%;
   height: 200%;
 }
-
-//@media screen and (max-width: 800px) {
-//  .menu {
-//    font-size: 8rem;
-//    width: 40rem;
-//    height: 10rem;
-//    &__button {
-//      font-size: 5rem;
-//    }
-//  }
-//}
