major refactor 50% complete

--- a/story/templates/story/game_page.html
+++ b/story/templates/story/game_page.html
@@ -14,10 +14,10 @@
         </div>
         <div id="selectionBox">
             <div id="storyButtonBox">
-                <button type="button" class="storySelector" id="Vistelse">Vistelse</button>
-                <button type="button" class="storySelector" id="Dummy Story">Dummy Story</button>
-                <button type="button" class="storySelector" id="Another_Test">Another_Test</button>
-                <button type="button" class="storySelector" id="Test_Story">Test_Story</button>
+{#                <button type="button" class="storySelector" id="Vistelse">Vistelse</button>#}
+{#                <button type="button" class="storySelector" id="Dummy Story">Dummy Story</button>#}
+{#                <button type="button" class="storySelector" id="Another_Test">Another_Test</button>#}
+{#                <button type="button" class="storySelector" id="Test_Story">Test_Story</button>#}
             </div>
             <div id="optionBox">
                 <button type="button" id="option1" class="optionSelector button"></button>
