serious progress being made!

--- a/story/static/css/story_page.css
+++ b/story/static/css/story_page.css
@@ -120,7 +120,7 @@ hr {
     opacity: 1;
 }
 .optionSelector {
-    display: none;
+    /*display: none;*/
     opacity: 0;
     max-height: 50%;
     overflow: auto;
