implemented better file architecture

--- a/story/templates/story/game_page.html
+++ b/story/templates/story/game_page.html
@@ -1,7 +1,7 @@
 {% extends 'story/base.html' %}
 {% load staticfiles %}
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/story_page.css' %}">{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/sass/pages/game_page/main.css' %}">{% endblock %}
 {% block header %} {% endblock %}
 {% block nav %} {% endblock %}
 {% block content %}
