--- a/story/static/css/sass/pages/game_page/components/button.scss
+++ b/story/static/css/sass/pages/game_page/components/button.scss
@@ -1,21 +1,27 @@
 .button {
-    background: transparent;
+    text-align: center;
+    display: inline-block;
+    background-color: rgba($btn-bg-color-1, .85);
     border: lightslategray outset medium;
-    color: lightslategray;
-    padding: 7px 14px;
+    color: rgba(3,3,3,.8);
+    font-weight: 500;
+    padding: 2rem 4rem;
+    opacity: 0;
+    border-radius: .5rem;
+    transition: all .2s;
+}
+
+.buttonOpaque {
+    opacity: 1;
 }
 
 .optionSelector {
-    /*display: none;*/
     opacity: 0;
     max-height: 50%;
     overflow: auto;
 }
 
 .storySelector {
-    opacity: 0;
-}
+    font-weight: 600;
 
-.btn {
-    opacity: 0;
 }
