--- a/story/static/css/sass/pages/game_page/components/storywrapper.scss
+++ b/story/static/css/sass/pages/game_page/components/storywrapper.scss
@@ -4,6 +4,7 @@
     grid-row: 2 / 3;
     color: lightseagreen;
     border: #7f7f7f inset medium;
+    border-radius: 3px;
     display: grid;
     grid-template-rows: 3fr 6fr 1fr;
     grid-template-columns: repeat(8, 1fr);
@@ -43,6 +44,7 @@
     justify-content: space-around;
     overflow: hidden;
     height: inherit;
+    width: 100%;
 }
 
 #storyButtonBox {
