began some styling

--- a/story/static/css/sass/pages/game_page/abstracts/variables.scss
+++ b/story/static/css/sass/pages/game_page/abstracts/variables.scss
@@ -1,3 +1,10 @@
+// COLORS
+$color-grey-light: #D7D6D6;
+$color-grey-pink: #BEB2C8;
+$color-grey-silver: #8D8D92;
+$color-grey-dark: #5D5E60;
+$color-onyx: #36413E;
+$color-bg-main: rgb(12, 8, 15);
 // BUTTONS
 $btn-bg-color-1: mintcream; 
 
