--- a/story/static/css/sass/pages/game_page/base/typography.scss
+++ b/story/static/css/sass/pages/game_page/base/typography.scss
@@ -1,11 +1,11 @@
-hr {
-    background-color: inherit;
-    border-color: lightslategray;
-}
+// hr {
+//     background-color: inherit;
+//     border-color: lightslategray;
+// }
 
 #storyWelcome {
-    color: darkslategray;
-    padding: 10px 20px;
+    // color: darkslategray;
+    // padding: 10px 20px;
 }
 
 .word {
