--- a/story/static/css/sass/pages/game_page/main.scss
+++ b/story/static/css/sass/pages/game_page/main.scss
@@ -2,11 +2,12 @@
 
 @import "abstracts/variables";
 
-// @import "base/animations";
+@import "base/animations";
 @import "base/base";
 @import "base/typography";
 
 @import "components/storywrapper";
-// @import "components/textbox";
-// @import "components/mainanimbox";
+@import "components/textwrapper";
+@import "components/mainanimbox";
+@import "components/selectionbox";
 @import "components/button";
