--- a/story/templates/story/game_page.html
+++ b/story/templates/story/game_page.html
@@ -6,9 +6,11 @@
 {% block nav %} {% endblock %}
 {% block content %}
     <div id="storyWrapper">
+        <div class="textWrapper">
         <div id="textBox">
             <p id="storyWelcome">Select your experience</p>
         </div>
+    </div>
         <div id="mainAnimBox">
             <hr>
         </div>
