--- a/story/static/css/sass/pages/game_page/components/storywrapper.scss
+++ b/story/static/css/sass/pages/game_page/components/storywrapper.scss
@@ -1,14 +1,13 @@
 #storyWrapper {
-    overflow: hidden;
+    // overflow: hidden;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     color: lightseagreen;
-    border: #7f7f7f inset medium;
-    border-radius: 3px;
     display: grid;
     grid-template-rows: 3fr 6fr 1fr;
     grid-template-columns: repeat(8, 1fr);
-    min-width: 100%
+    min-width: 100%;
+    overflow: hidden;
     /*box-shadow: 5px 10px */
 }
 
@@ -16,15 +15,24 @@
     grid-column: 1 / -1;
     grid-row: 2 / 3;
 }
+.textWrapper {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    border: #7f7f7f solid medium;
+    border-radius: 3px;
+}
+
+#storyWelcome {
+}
 
 #textBox {
     box-sizing: content-box;
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    
     text-align: center;
     word-wrap: break-spaces;
     overflow: auto;
     width: 100%;
+    height: 100%;
     padding-right: 20px;
 }
 
