--- a/story/static/css/sass/pages/game_page/main.css
+++ b/story/static/css/sass/pages/game_page/main.css
@@ -7,19 +7,11 @@ html {
 
 body {
   height: 100vh;
-  background: black;
+  background: #D7D6D6;
   font-family: 'Lobster', cursive;
   display: grid;
   grid-template-columns: 1fr 9fr 1fr;
   grid-template-rows: 1fr 9fr 1fr; }
-
-hr {
-  background-color: inherit;
-  border-color: lightslategray; }
-
-#storyWelcome {
-  color: darkslategray;
-  padding: 10px 20px; }
 
 .word {
   display: inline;
@@ -27,29 +19,33 @@ hr {
   font-size: 1.5rem; }
 
 #storyWrapper {
-  overflow: hidden;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   color: lightseagreen;
-  border: #7f7f7f inset medium;
-  border-radius: 3px;
   display: grid;
   grid-template-rows: 3fr 6fr 1fr;
   grid-template-columns: repeat(8, 1fr);
-  min-width: 100%; }
+  min-width: 100%;
+  overflow: hidden;
+  /*box-shadow: 5px 10px */ }
 
 #mainAnimBox {
   grid-column: 1 / -1;
   grid-row: 2 / 3; }
 
-#textBox {
-  box-sizing: content-box;
+.textWrapper {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
+  border: #7f7f7f solid medium;
+  border-radius: 3px; }
+
+#textBox {
+  box-sizing: content-box;
   text-align: center;
   word-wrap: break-spaces;
   overflow: auto;
   width: 100%;
+  height: 100%;
   padding-right: 20px; }
 
 #selectionBox {
