Hurrah! More big improvements. Dynamically generated option buttons && some basic button animation work has been started!

--- a/story/static/css/sass/pages/game_page/abstracts/variables.scss
+++ b/story/static/css/sass/pages/game_page/abstracts/variables.scss
@@ -5,6 +5,10 @@ $color-grey-silver: #8D8D92;
 $color-grey-dark: #5D5E60;
 $color-onyx: #36413E;
 $color-bg-main: rgb(12, 8, 15);
+
+// TYPOGRAPHY
+$color-type-main: rgb(12, 8, 15); 
+
 // BUTTONS
 $btn-bg-color-1: mintcream; 
 
