--- a/story/templates/story/game_page.html
+++ b/story/templates/story/game_page.html
@@ -12,15 +12,15 @@
         </div>
     </div>
         <div id="mainAnimBox">
-            <hr>
+            <!-- <hr> -->
         </div>
         <div id="selectionBox">
             <div id="storyButtonBox">
             </div>
             <div id="optionBox">
-                <button type="button" id="option1" class="optionSelector button"></button>
+                <!-- <button type="button" id="option1" class="optionSelector button"></button>
                 <button type="button" id="option2" class="optionSelector button"></button>
-                <button type="button" id="option3" class="optionSelector button"></button>
+                <button type="button" id="option3" class="optionSelector button"></button> -->
             </div>
         </div>
     </div>
