--- a/story/static/css/sass/pages/game_page/components/button.scss
+++ b/story/static/css/sass/pages/game_page/components/button.scss
@@ -1,25 +1,35 @@
 .button {
     text-align: center;
     display: inline-block;
-    background-color: rgba($btn-bg-color-1, .85);
+    background-color: rgba($btn-bg-color-1, .9);
     border: lightslategray outset medium;
     color: rgba($color-type-main, .6);
     font-weight: 500;
     padding: 2rem 4rem;
     opacity: 0;
     border-radius: .5rem;
-    transition: all .2s;
+    transition: all 1s;
+    box-shadow: 1px 3px 3px 1px rgba($color-black, .3);
     &--wrapper {
-        transition: all .2s
+        // transition: all 3s;
+        margin-bottom: 1rem;
     }
-    &:hover {
+    &:hover, 
+    &--wrapper:hover {
         // NAMED ANIMS NOT NECESSARY
         // Rework into transitions
-        animation: opaqueHover 2s forwards;
-        button--wrapper {
-            animation: drift 4s alternate infinite reverse;
+        .button {
+            transform: scale(1.1) translateY(-1.5rem);
+            background-color: rgba($btn-bg-color-1, 1);
+            box-shadow: 2px 6px 6px 2px rgba($color-black, .15)
+            // animation: drift alternate 1s infinite
         }
     }
+}
+#selectionBox:hover .button:not(:hover) {
+    transform: scale(.95) translateY(.25rem);
+    background-color: rgba($btn-bg-color-1, .5);
+    box-shadow: 1px 2px 1px 1px rgba($color-black, .15)
 }
 
 
