--- a/story/static/css/sass/pages/game_page/components/storywrapper.scss
+++ b/story/static/css/sass/pages/game_page/components/storywrapper.scss
@@ -4,17 +4,14 @@
     grid-row: 2 / 3;
     color: lightseagreen;
     display: grid;
-    grid-template-rows: 3fr 6fr 1fr;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-rows: 3fr 3fr 5fr 2fr;
     min-width: 100%;
     // overflow: hidden;
     /*box-shadow: 5px 10px */
 }
 
-#mainAnimBox {
-    grid-column: 1 / -1;
-    grid-row: 2 / 3;
-}
+
 .textWrapper {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
@@ -23,42 +20,4 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 1px 3px 3px 1px rgba($color-black, .3);
-}
-
-#storyWelcome {
-    margin: auto 0;
-}
-
-#textBox {
-    box-sizing: content-box;
-    
-    text-align: center;
-    word-wrap: break-spaces;
-    overflow: auto;
-    width: 100%;
-    height: 100%;
-    padding-right: 20px;
-}
-
-#selectionBox {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#optionBox {
-    /*display: flex;*/
-    display: none;
-    align-items: center;
-    justify-content: space-around;
-    height: inherit;
-    width: 100%;
-}
-
-#storyButtonBox {
-    display: flex;
-    justify-content: space-around;
-    min-width: 40%;
 }
