--- a/story/static/css/sass/pages/game_page/main.css
+++ b/story/static/css/sass/pages/game_page/main.css
@@ -26,6 +26,9 @@ body {
   grid-template-columns: 1fr 9fr 1fr;
   grid-template-rows: 1fr 5fr 1fr; }
 
+#storyWelcome {
+  margin: auto 0; }
+
 .word {
   display: inline;
   opacity: 0;
@@ -37,14 +40,10 @@ body {
   grid-row: 2 / 3;
   color: lightseagreen;
   display: grid;
-  grid-template-rows: 3fr 6fr 1fr;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-rows: 3fr 3fr 5fr 2fr;
   min-width: 100%;
   /*box-shadow: 5px 10px */ }
-
-#mainAnimBox {
-  grid-column: 1 / -1;
-  grid-row: 2 / 3; }
 
 .textWrapper {
   grid-column: 1 / -1;
@@ -55,10 +54,9 @@ body {
   margin: 0 auto;
   box-shadow: 1px 3px 3px 1px rgba(5, 5, 5, 0.3); }
 
-#storyWelcome {
-  margin: auto 0; }
-
 #textBox {
+  grid-column: 1 / -1;
+  grid-row: 1 / 3;
   box-sizing: content-box;
   text-align: center;
   word-wrap: break-spaces;
@@ -67,12 +65,17 @@ body {
   height: 100%;
   padding-right: 20px; }
 
+#mainAnimBox {
+  grid-column: 1 / -1;
+  grid-row: 3 / 4; }
+
 #selectionBox {
   grid-column: 1 / -1;
-  grid-row: 3 / 4;
-  display: flex;
+  grid-row: 4 / 5;
+  display: block;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  min-height: 100%; }
 
 #optionBox {
   /*display: flex;*/
@@ -97,19 +100,20 @@ body {
   padding: 2rem 4rem;
   opacity: 0;
   border-radius: .5rem;
-  transition: all 1s;
-  box-shadow: 1px 3px 3px 1px rgba(5, 5, 5, 0.3); }
+  transition: all .6s; }
   .button--wrapper {
     margin-bottom: 1rem; }
   .button:hover .button, .button--wrapper:hover .button {
     transform: scale(1.1) translateY(-1.5rem);
     background-color: mintcream;
-    box-shadow: 2px 6px 6px 2px rgba(5, 5, 5, 0.15); }
-
-#selectionBox:hover .button:not(:hover) {
-  transform: scale(0.95) translateY(0.25rem);
-  background-color: rgba(245, 255, 250, 0.5);
-  box-shadow: 1px 2px 1px 1px rgba(5, 5, 5, 0.15); }
+    box-shadow: 4px 1rem 1rem 4px rgba(5, 5, 5, 0.15) .button:hover .button, .button--wrapper:hover .button --wrapper;
+      box-shadow-transform: scale(1.15) translateY(-1.5rem); }
+  .button:active {
+    box-shadow: 1px 3px 3px 1px rgba(5, 5, 5, 0.5); }
+  .button:not(:hover) {
+    transform: scale(0.95) translateY(0.25rem);
+    background-color: rgba(245, 255, 250, 0.5);
+    box-shadow: inset 1px 2px 1px 1px rgba(5, 5, 5, 0.15); }
 
 .buttonOpaque {
   opacity: 1; }
